<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#1F1818"
        android:backgroundTintMode="multiply"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/books"
        android:tint="#004D4545" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/banner_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:drawableStart="@drawable/menu_book_white"
            android:drawablePadding="4dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="350dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:text="@string/create_account"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/facebook_log_in_button"
            android:layout_width="350dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="false"
            android:background="#2E448C"
            android:contentDescription="@string/log_in_with_facebook"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/fb_log_in" />

        <TextView
            android:id="@+id/sign_in_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/sign_in_text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />


    </LinearLayout>
</FrameLayout>